# dcs-lua-composer-action

./: .composerrc.example  .composerrc.example.dependencies  .composerrc.example.detailed  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  Taskfile.yml  action.yml  composer.py  dependency_manager.py  pyproject.toml  read_composerrc.py  requirements-dev.txt  requirements.txt
.github/workflows/: build_dcs_lua.yml  cd.yml  ci.yml
.task/checksum/: format  lint  setup  test
tests/: test_composer.py  test_composerrc.py  test_config_merging.sh  test_dependency_manager.py  test_end_to_end_dependencies.py  test_integration_dependencies.py  test_output_with_dependencies.py
tests/fixtures/: .composerrc.example
tests/fixtures/dependency_test/: .composerrc
tests/fixtures/dependency_test/external_deps/: LICENSE  test_lib.lua
tests/fixtures/dependency_test/src/: main.lua  namespace.lua
tests/functional_test_project/src/: header.lua  main.lua  manager.lua  namespace.lua  service.lua
tests/functional_test_project/src/component/: component_one.lua  component_three.lua  component_two.lua
tests/functional_test_project/src/controller/: controller.lua
tests/functional_test_project/src/feature/: feature_five.lua  feature_four.lua  feature_one.lua  feature_three.lua  feature_two.lua
tests/output_examples/: example_with_mist_like.lua  example_with_multiple_deps.lua  example_with_test_lib.lua
tests/output_examples/mist_test/mock_deps/: LICENSE  mist.lua
tests/output_examples/mist_test/src/: main.lua  namespace.lua
(+2 files in other folders)
